kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addressbook-backend
  labels:
    app: addressbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook
  template:
    metadata:
      labels:
        app: addressbook
    spec:
      imagePullSecrets:
      - name: icr
      containers:
      - name: backend
        image: jp.icr.io/jcc-dev/ab-backend:1.0
        ports:
        - containerPort: 5000
