kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-backend-service
spec:
  selector:
    app: addressbook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
