kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addressbook-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"       # Redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Force SSL on all requests
spec:
  tls:
  - hosts:
    - ab-api.devcluster-985078-2d3fb824a69ea5c326974e87bbe5c52a-0000.jp-tok.containers.appdomain.cloud
    secretName: devcluster-985078-2d3fb824a69ea5c326974e87bbe5c52a-0000
  rules:
  - host: ab-api.devcluster-985078-2d3fb824a69ea5c326974e87bbe5c52a-0000.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: addressbook-backend-service
            port:
              number: 80
